td2/exercice4.txt
>>> x=3.5
>>> type(x)
<type 'float'>
>>> int(x)
3
>>> type(x)
<type 'float'>
>>> y=-10.2
>>> abs(y)
nathanfallet:~ nathanfallet$ python
Python 2.7.15 (default, Oct  2 2018, 11:42:04) 
[GCC 4.2.1 Compatible Apple LLVM 10.0.0 (clang-1000.11.45.2)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> print "bonjour"
bonjour
>>> print ("bonjour")
bonjour
>>> input "bonjour"
  File "<stdin>", line 1
    input "bonjour"
                  ^
SyntaxError: invalid syntax
>>> input("bonjour")
bonjour
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
>>> input()

Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
>>> input("entrez votre age .\n ")
entrez votre age .
 1
1
>>> x= input("entrez votre age .\n ")
entrez votre age .
 1
>>> print (x)
1
>>> type(x)
<type 'int'>
>>> print("votre age est %s"% x)
votre age est 1
>>> print("votre age est %d"% x)
votre age est 1
>>> x=int(x)
>>> print("votre age est %d"% x)
votre age est 1